# Zuck-your-very-own-AI-hacker-buddy

./: .gitignore  README.md  TOOLS_GUIDE.md  agent.py  analytics.py  apikey.txt  chat based implementation.py  config.py  cooler.py  dual.py  execution.py  install_tools.sh  logger.py  main.py  models.py  pyproject.toml  requirements.txt  security.py  setup.sh  system.py  testbed.py  tools.py  tracking.py  working.py
logs/: session_20251018_214847.json  session_20251202_195350.json  session_20251202_200613.json  summary_20251018_214847.txt  summary_20251202_195350.txt  summary_20251202_200613.txt
zuck/: __init__.py  __main__.py
zuck/cli/: __init__.py  autocomplete.py  display.py  main.py  repl.py  slash_commands.py
zuck/core/: __init__.py  agent.py  config.py  models.py  session.py
zuck/execution/: __init__.py  executor.py  proposal.py
zuck/knowledge/: __init__.py  mitre_attack.py  owasp.py
zuck/llm/: __init__.py  anthropic.py  base.py  factory.py  google.py  groq.py  ollama.py  openai.py
zuck/playbooks/: __init__.py  incident_response.py  recon.py  web_pentest.py
zuck/security/: __init__.py  patterns.py  validator.py
zuck/shell/: __init__.py  manager.py  session.py  tools.py
zuck/tools/: __init__.py  calculator.py  datetime_tool.py  dns.py  exploit_db.py  file_reader.py  hash_cracker.py  http.py  ioc_extractor.py  ip_geolocation.py  log_analyzer.py  memory.py  payload_generator.py  planner.py  port_scanner.py  python_repl.py  registry.py  shell.py  shodan.py  social_analyzer.py  sql_injection.py  ssl_analyzer.py  subdomain_finder.py  system_monitor.py  (+4 more)
(+4 files in other folders)
